<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.sitture</groupId>
	<artifactId>fitnesse-maven-example</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>

	<name>fitnesse-maven-example</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<standalone.classpath>FitNesse/fixtures</standalone.classpath>
		<port>8082</port>
		<suitePath>Calculator</suitePath>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- commons collections with important security fix (to overwrite Velocity's) -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>4.4</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
		</dependency>
		<!-- Fitnesse -->
		<dependency>
			<groupId>org.fitnesse</groupId>
			<artifactId>fitnesse</artifactId>
			<version>20200501</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.freemarker</groupId>
			<artifactId>freemarker</artifactId>
			<version>2.3.30</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
			<id>fitnesse</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
							<encoding>${project.build.sourceEncoding}</encoding>
							<showDeprecation>true</showDeprecation>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>3.0.0</version>
						<executions>
							<execution>
								<phase>test</phase>
								<goals>
									<goal>exec</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<executable>java</executable>
							<workingDirectory>FitNesse</workingDirectory>
							<arguments>
								<argument>-jar</argument>
								<argument>fitnesse-standalone.jar</argument>
								<argument>-p</argument>
								<argument>${port}</argument>
								<argument>-f</argument>
								<argument>plugins.properties</argument>
								<argument>-l</argument>
								<argument>logs</argument>
							</arguments>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.22.2</version>
						<configuration>
							<excludes>
								<!-- this test actually runs fitnesse tests therefore it will only
									be executed for integration-test goal -->
								<exclude>**/FitnesseSuiteTest.java</exclude>
							</excludes>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.22.2</version>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<!-- this test actually runs fitnesse tests -->
							<test>FitnesseSuiteTest</test>
							<systemPropertyVariables>
								<fitnesseSuiteToRun>${suitePath}</fitnesseSuiteToRun>
							</systemPropertyVariables>
							<properties>
								<property>
									<name>listener</name>
									<value>com.levelup.config.JUnitXMLPerPageListener,com.levelup.config.ProgressLoggerListener</value>
								</property>
							</properties>
							<!-- Our listener will create XML failsafe should not, or all tests
								are reported twice -->
							<disableXmlReport>true</disableXmlReport>
						</configuration>
					</plugin>
					<plugin>
						<!-- Use dependency:copy-dependencies to copy all jar from dependencies
							to ${standalone.classpath}, where classes from this project end up also,
							so that all fixtures and dependencies are available to Fitnesse without need
							to have Maven to run tests. -->
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<version>3.1.2</version>
						<configuration>
							<includes>**/*</includes>
							<excludes>META-INF,META-INF/**</excludes>
							<includeScope>runtime</includeScope>
							<excludeArtifactIds>fitnesse,junit</excludeArtifactIds>
							<outputDirectory>${standalone.classpath}</outputDirectory>
						</configuration>
						<executions>
							<execution>
								<id>copy-fitnesse-standalone</id>
								<phase>generate-resources</phase>
								<goals>
									<goal>copy</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.fitnesse</groupId>
											<artifactId>fitnesse</artifactId>
											<classifier>standalone</classifier>
											<overWrite>true</overWrite>
										</artifactItem>
									</artifactItems>
									<stripVersion>true</stripVersion>
									<outputDirectory>${project.basedir}/FitNesse</outputDirectory>
								</configuration>
							</execution>
							<execution>
								<id>copy-plugins</id>
								<phase>generate-resources</phase>
								<goals>
									<goal>copy</goal>
								</goals>
								<configuration>
									<artifactItems>
										<artifactItem>
											<groupId>org.fitnesse.plugins</groupId>
											<artifactId>maven-classpath-plugin</artifactId>
											<version>1.9</version>
											<classifier>jar-with-dependencies</classifier>
											<overWrite>true</overWrite>
										</artifactItem>
									</artifactItems>
									<outputDirectory>${project.basedir}/FitNesse/plugins</outputDirectory>
								</configuration>
							</execution>
							<execution>
								<id>copy-dependencies-to-wiki-fixtures</id>
								<phase>package</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>3.3.0</version>
						<configuration>
							<descriptors>
								<descriptor>src/assembly/standalone.xml</descriptor>
							</descriptors>
						</configuration>
						<executions>
							<execution>
								<id>create-standalone-zip</id>
								<phase>package</phase>
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
